compiler/hw3/project3/src/subc.output
Grammar

    0 $accept: program $end

    1 program: ext_def_list

    2 ext_def_list: ext_def_list ext_def
    3             | ε

    4 ext_def: type_specifier pointers ID ';'
    5        | type_specifier pointers ID '[' INTEGER_CONST ']' ';'
    6        | struct_specifier ';'
    7        | func_decl compound_stmt

    8 type_specifier: TYPE
    9               | struct_specifier

   10 $@1: ε

   11 struct_specifier: STRUCT ID '{' $@1 def_list '}'
   12                 | STRUCT ID

   13 func_decl: type_specifier pointers ID '(' ')'

   14 $@2: ε

   15 func_decl: type_specifier pointers ID '(' $@2 param_list ')'

   16 pointers: '*'
   17         | ε

   18 param_list: param_decl
   19           | param_list ',' param_decl

   20 param_decl: type_specifier pointers ID
   21           | type_specifier pointers ID '[' INTEGER_CONST ']'

   22 def_list: def_list def
   23         | ε

   24 def: type_specifier pointers ID ';'
   25    | type_specifier pointers ID '[' INTEGER_CONST ']' ';'

   26 $@3: ε

   27 compound_stmt: '{' $@3 def_list stmt_list '}'

   28 stmt_list: stmt_list stmt
   29          | ε

   30 stmt: expr ';'
   31     | RETURN expr ';'
   32     | BREAK ';'
   33     | CONTINUE ';'
   34     | ';'
   35     | compound_stmt
   36     | IF '(' expr ')' stmt
   37     | IF '(' expr ')' stmt ELSE stmt
   38     | WHILE '(' expr ')' stmt
   39     | FOR '(' expr_e ';' expr_e ';' expr_e ')' stmt

   40 expr_e: expr
   41       | ε

   42 expr: unary '=' expr
   43     | binary

   44 binary: binary RELOP binary
   45       | binary EQUOP binary
   46       | binary '+' binary
   47       | binary '-' binary
   48       | binary '*' binary
   49       | binary '/' binary
   50       | binary '%' binary
   51       | unary
   52       | binary LOGICAL_AND binary
   53       | binary LOGICAL_OR binary

   54 unary: '(' expr ')'
   55      | '(' unary ')'
   56      | INTEGER_CONST
   57      | CHAR_CONST
   58      | STRING
   59      | ID
   60      | '-' unary
   61      | '!' unary
   62      | unary INCOP
   63      | unary DECOP
   64      | INCOP unary
   65      | DECOP unary
   66      | '&' unary
   67      | '*' unary
   68      | unary '[' expr ']'
   69      | unary '.' ID
   70      | unary STRUCTOP ID
   71      | unary '(' args ')'
   72      | unary '(' ')'
   73      | SYM_NULL

   74 args: expr
   75     | args ',' expr


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 61
    '%' (37) 50
    '&' (38) 66
    '(' (40) 13 15 36 37 38 39 54 55 71 72
    ')' (41) 13 15 36 37 38 39 54 55 71 72
    '*' (42) 16 48 67
    '+' (43) 46
    ',' (44) 19 75
    '-' (45) 47 60
    '.' (46) 69
    '/' (47) 49
    ';' (59) 4 5 6 24 25 30 31 32 33 34 39
    '=' (61) 42
    '[' (91) 5 21 25 68
    ']' (93) 5 21 25 68
    '{' (123) 11 27
    '}' (125) 11 27
    error (256)
    STRUCT (258) 11 12
    RETURN (259) 31
    WHILE (260) 38
    FOR (261) 39
    BREAK (262) 32
    CONTINUE (263) 33
    SYM_NULL (264) 73
    CHAR_CONST (265) 57
    STRING (266) 58
    RELOP (267) 44
    EQUOP (268) 45
    LOGICAL_AND (269) 52
    LOGICAL_OR (270) 53
    INCOP (271) 62 64
    DECOP (272) 63 65
    STRUCTOP (273) 70
    IF (274) 36 37
    ELSE (275) 37
    INTEGER_CONST <intVal> (276) 5 21 25 56
    TYPE <intVal> (277) 8
    ID <stringVal> (278) 4 5 11 12 13 15 20 21 24 25 59 69 70


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    program (42)
        on left: 1
        on right: 0
    ext_def_list (43)
        on left: 2 3
        on right: 1 2
    ext_def (44)
        on left: 4 5 6 7
        on right: 2
    type_specifier <typePtr> (45)
        on left: 8 9
        on right: 4 5 13 15 20 21 24 25
    struct_specifier <typePtr> (46)
        on left: 11 12
        on right: 6 9
    $@1 (47)
        on left: 10
        on right: 11
    func_decl (48)
        on left: 13 15
        on right: 7
    $@2 (49)
        on left: 14
        on right: 15
    pointers <typePtr> (50)
        on left: 16 17
        on right: 4 5 13 15 20 21 24 25
    param_list <param_ptr> (51)
        on left: 18 19
        on right: 15 19
    param_decl <typePtr> (52)
        on left: 20 21
        on right: 18 19
    def_list (53)
        on left: 22 23
        on right: 11 22 27
    def (54)
        on left: 24 25
        on right: 22
    compound_stmt (55)
        on left: 27
        on right: 7 35
    $@3 (56)
        on left: 26
        on right: 27
    stmt_list (57)
        on left: 28 29
        on right: 27 28
    stmt (58)
        on left: 30 31 32 33 34 35 36 37 38 39
        on right: 28 36 37 38 39
    expr_e <exprPtr> (59)
        on left: 40 41
        on right: 39
    expr <exprPtr> (60)
        on left: 42 43
        on right: 30 31 36 37 38 40 42 54 68 74 75
    binary <exprPtr> (61)
        on left: 44 45 46 47 48 49 50 51 52 53
        on right: 43 44 45 46 47 48 49 50 52 53
    unary <exprPtr> (62)
        on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 42 51 55 60 61 62 63 64 65 66 67 68 69 70 71 72
    args <param_ptr> (63)
        on left: 74 75
        on right: 71 75


State 0

    0 $accept: • program $end

    $default  reduce using rule 3 (ext_def_list)

    program       go to state 1
    ext_def_list  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: ext_def_list •
    2 ext_def_list: ext_def_list • ext_def

    STRUCT  shift, and go to state 4
    TYPE    shift, and go to state 5

    $default  reduce using rule 1 (program)

    ext_def           go to state 6
    type_specifier    go to state 7
    struct_specifier  go to state 8
    func_decl         go to state 9


State 3

    0 $accept: program $end •

    $default  accept


State 4

   11 struct_specifier: STRUCT • ID '{' $@1 def_list '}'
   12                 | STRUCT • ID

    ID  shift, and go to state 10


State 5

    8 type_specifier: TYPE •

    $default  reduce using rule 8 (type_specifier)


State 6

    2 ext_def_list: ext_def_list ext_def •

    $default  reduce using rule 2 (ext_def_list)


State 7

    4 ext_def: type_specifier • pointers ID ';'
    5        | type_specifier • pointers ID '[' INTEGER_CONST ']' ';'
   13 func_decl: type_specifier • pointers ID '(' ')'
   15          | type_specifier • pointers ID '(' $@2 param_list ')'

    '*'  shift, and go to state 11

    $default  reduce using rule 17 (pointers)

    pointers  go to state 12


State 8

    6 ext_def: struct_specifier • ';'
    9 type_specifier: struct_specifier •

    ';'  shift, and go to state 13

    $default  reduce using rule 9 (type_specifier)


State 9

    7 ext_def: func_decl • compound_stmt

    '{'  shift, and go to state 14

    compound_stmt  go to state 15


State 10

   11 struct_specifier: STRUCT ID • '{' $@1 def_list '}'
   12                 | STRUCT ID •

    '{'  shift, and go to state 16

    $default  reduce using rule 12 (struct_specifier)


State 11

   16 pointers: '*' •

    $default  reduce using rule 16 (pointers)


State 12

    4 ext_def: type_specifier pointers • ID ';'
    5        | type_specifier pointers • ID '[' INTEGER_CONST ']' ';'
   13 func_decl: type_specifier pointers • ID '(' ')'
   15          | type_specifier pointers • ID '(' $@2 param_list ')'

    ID  shift, and go to state 17


State 13

    6 ext_def: struct_specifier ';' •

    $default  reduce using rule 6 (ext_def)


State 14

   27 compound_stmt: '{' • $@3 def_list stmt_list '}'

    $default  reduce using rule 26 ($@3)

    $@3  go to state 18


State 15

    7 ext_def: func_decl compound_stmt •

    $default  reduce using rule 7 (ext_def)


State 16

   11 struct_specifier: STRUCT ID '{' • $@1 def_list '}'

    $default  reduce using rule 10 ($@1)

    $@1  go to state 19


State 17

    4 ext_def: type_specifier pointers ID • ';'
    5        | type_specifier pointers ID • '[' INTEGER_CONST ']' ';'
   13 func_decl: type_specifier pointers ID • '(' ')'
   15          | type_specifier pointers ID • '(' $@2 param_list ')'

    '['  shift, and go to state 20
    '('  shift, and go to state 21
    ';'  shift, and go to state 22


State 18

   27 compound_stmt: '{' $@3 • def_list stmt_list '}'

    $default  reduce using rule 23 (def_list)

    def_list  go to state 23


State 19

   11 struct_specifier: STRUCT ID '{' $@1 • def_list '}'

    $default  reduce using rule 23 (def_list)

    def_list  go to state 24


State 20

    5 ext_def: type_specifier pointers ID '[' • INTEGER_CONST ']' ';'

    INTEGER_CONST  shift, and go to state 25


State 21

   13 func_decl: type_specifier pointers ID '(' • ')'
   15          | type_specifier pointers ID '(' • $@2 param_list ')'

    ')'  shift, and go to state 26

    $default  reduce using rule 14 ($@2)

    $@2  go to state 27


State 22

    4 ext_def: type_specifier pointers ID ';' •

    $default  reduce using rule 4 (ext_def)


State 23

   22 def_list: def_list • def
   27 compound_stmt: '{' $@3 def_list • stmt_list '}'

    STRUCT  shift, and go to state 4
    TYPE    shift, and go to state 5

    $default  reduce using rule 29 (stmt_list)

    type_specifier    go to state 28
    struct_specifier  go to state 29
    def               go to state 30
    stmt_list         go to state 31


State 24

   11 struct_specifier: STRUCT ID '{' $@1 def_list • '}'
   22 def_list: def_list • def

    STRUCT  shift, and go to state 4
    TYPE    shift, and go to state 5
    '}'     shift, and go to state 32

    type_specifier    go to state 28
    struct_specifier  go to state 29
    def               go to state 30


State 25

    5 ext_def: type_specifier pointers ID '[' INTEGER_CONST • ']' ';'

    ']'  shift, and go to state 33


State 26

   13 func_decl: type_specifier pointers ID '(' ')' •

    $default  reduce using rule 13 (func_decl)


State 27

   15 func_decl: type_specifier pointers ID '(' $@2 • param_list ')'

    STRUCT  shift, and go to state 4
    TYPE    shift, and go to state 5

    type_specifier    go to state 34
    struct_specifier  go to state 29
    param_list        go to state 35
    param_decl        go to state 36


State 28

   24 def: type_specifier • pointers ID ';'
   25    | type_specifier • pointers ID '[' INTEGER_CONST ']' ';'

    '*'  shift, and go to state 11

    $default  reduce using rule 17 (pointers)

    pointers  go to state 37


State 29

    9 type_specifier: struct_specifier •

    $default  reduce using rule 9 (type_specifier)


State 30

   22 def_list: def_list def •

    $default  reduce using rule 22 (def_list)


State 31

   27 compound_stmt: '{' $@3 def_list stmt_list • '}'
   28 stmt_list: stmt_list • stmt

    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '&'            shift, and go to state 41
    '('            shift, and go to state 42
    RETURN         shift, and go to state 43
    WHILE          shift, and go to state 44
    FOR            shift, and go to state 45
    BREAK          shift, and go to state 46
    CONTINUE       shift, and go to state 47
    SYM_NULL       shift, and go to state 48
    CHAR_CONST     shift, and go to state 49
    STRING         shift, and go to state 50
    INCOP          shift, and go to state 51
    DECOP          shift, and go to state 52
    IF             shift, and go to state 53
    INTEGER_CONST  shift, and go to state 54
    ID             shift, and go to state 55
    ';'            shift, and go to state 56
    '{'            shift, and go to state 14
    '}'            shift, and go to state 57

    compound_stmt  go to state 58
    stmt           go to state 59
    expr           go to state 60
    binary         go to state 61
    unary          go to state 62


State 32

   11 struct_specifier: STRUCT ID '{' $@1 def_list '}' •

    $default  reduce using rule 11 (struct_specifier)


State 33

    5 ext_def: type_specifier pointers ID '[' INTEGER_CONST ']' • ';'

    ';'  shift, and go to state 63


State 34

   20 param_decl: type_specifier • pointers ID
   21           | type_specifier • pointers ID '[' INTEGER_CONST ']'

    '*'  shift, and go to state 11

    $default  reduce using rule 17 (pointers)

    pointers  go to state 64


State 35

   15 func_decl: type_specifier pointers ID '(' $@2 param_list • ')'
   19 param_list: param_list • ',' param_decl

    ','  shift, and go to state 65
    ')'  shift, and go to state 66


State 36

   18 param_list: param_decl •

    $default  reduce using rule 18 (param_list)


State 37

   24 def: type_specifier pointers • ID ';'
   25    | type_specifier pointers • ID '[' INTEGER_CONST ']' ';'

    ID  shift, and go to state 67


State 38

   60 unary: '-' • unary

    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '&'            shift, and go to state 41
    '('            shift, and go to state 42
    SYM_NULL       shift, and go to state 48
    CHAR_CONST     shift, and go to state 49
    STRING         shift, and go to state 50
    INCOP          shift, and go to state 51
    DECOP          shift, and go to state 52
    INTEGER_CONST  shift, and go to state 54
    ID             shift, and go to state 55

    unary  go to state 68


State 39

   67 unary: '*' • unary

    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '&'            shift, and go to state 41
    '('            shift, and go to state 42
    SYM_NULL       shift, and go to state 48
    CHAR_CONST     shift, and go to state 49
    STRING         shift, and go to state 50
    INCOP          shift, and go to state 51
    DECOP          shift, and go to state 52
    INTEGER_CONST  shift, and go to state 54
    ID             shift, and go to state 55

    unary  go to state 69


State 40

   61 unary: '!' • unary

    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '&'            shift, and go to state 41
    '('            shift, and go to state 42
    SYM_NULL       shift, and go to state 48
    CHAR_CONST     shift, and go to state 49
    STRING         shift, and go to state 50
    INCOP          shift, and go to state 51
    DECOP          shift, and go to state 52
    INTEGER_CONST  shift, and go to state 54
    ID             shift, and go to state 55

    unary  go to state 70


State 41

   66 unary: '&' • unary

    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '&'            shift, and go to state 41
    '('            shift, and go to state 42
    SYM_NULL       shift, and go to state 48
    CHAR_CONST     shift, and go to state 49
    STRING         shift, and go to state 50
    INCOP          shift, and go to state 51
    DECOP          shift, and go to state 52
    INTEGER_CONST  shift, and go to state 54
    ID             shift, and go to state 55

    unary  go to state 71


State 42

   54 unary: '(' • expr ')'
   55      | '(' • unary ')'

    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '&'            shift, and go to state 41
    '('            shift, and go to state 42
    SYM_NULL       shift, and go to state 48
    CHAR_CONST     shift, and go to state 49
    STRING         shift, and go to state 50
    INCOP          shift, and go to state 51
    DECOP          shift, and go to state 52
    INTEGER_CONST  shift, and go to state 54
    ID             shift, and go to state 55

    expr    go to state 72
    binary  go to state 61
    unary   go to state 73


State 43

   31 stmt: RETURN • expr ';'

    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '&'            shift, and go to state 41
    '('            shift, and go to state 42
    SYM_NULL       shift, and go to state 48
    CHAR_CONST     shift, and go to state 49
    STRING         shift, and go to state 50
    INCOP          shift, and go to state 51
    DECOP          shift, and go to state 52
    INTEGER_CONST  shift, and go to state 54
    ID             shift, and go to state 55

    expr    go to state 74
    binary  go to state 61
    unary   go to state 62


State 44

   38 stmt: WHILE • '(' expr ')' stmt

    '('  shift, and go to state 75


State 45

   39 stmt: FOR • '(' expr_e ';' expr_e ';' expr_e ')' stmt

    '('  shift, and go to state 76


State 46

   32 stmt: BREAK • ';'

    ';'  shift, and go to state 77


State 47

   33 stmt: CONTINUE • ';'

    ';'  shift, and go to state 78


State 48

   73 unary: SYM_NULL •

    $default  reduce using rule 73 (unary)


State 49

   57 unary: CHAR_CONST •

    $default  reduce using rule 57 (unary)


State 50

   58 unary: STRING •

    $default  reduce using rule 58 (unary)


State 51

   64 unary: INCOP • unary

    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '&'            shift, and go to state 41
    '('            shift, and go to state 42
    SYM_NULL       shift, and go to state 48
    CHAR_CONST     shift, and go to state 49
    STRING         shift, and go to state 50
    INCOP          shift, and go to state 51
    DECOP          shift, and go to state 52
    INTEGER_CONST  shift, and go to state 54
    ID             shift, and go to state 55

    unary  go to state 79


State 52

   65 unary: DECOP • unary

    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '&'            shift, and go to state 41
    '('            shift, and go to state 42
    SYM_NULL       shift, and go to state 48
    CHAR_CONST     shift, and go to state 49
    STRING         shift, and go to state 50
    INCOP          shift, and go to state 51
    DECOP          shift, and go to state 52
    INTEGER_CONST  shift, and go to state 54
    ID             shift, and go to state 55

    unary  go to state 80


State 53

   36 stmt: IF • '(' expr ')' stmt
   37     | IF • '(' expr ')' stmt ELSE stmt

    '('  shift, and go to state 81


State 54

   56 unary: INTEGER_CONST •

    $default  reduce using rule 56 (unary)


State 55

   59 unary: ID •

    $default  reduce using rule 59 (unary)


State 56

   34 stmt: ';' •

    $default  reduce using rule 34 (stmt)


State 57

   27 compound_stmt: '{' $@3 def_list stmt_list '}' •

    $default  reduce using rule 27 (compound_stmt)


State 58

   35 stmt: compound_stmt •

    $default  reduce using rule 35 (stmt)


State 59

   28 stmt_list: stmt_list stmt •

    $default  reduce using rule 28 (stmt_list)


State 60

   30 stmt: expr • ';'

    ';'  shift, and go to state 82


State 61

   43 expr: binary •
   44 binary: binary • RELOP binary
   45       | binary • EQUOP binary
   46       | binary • '+' binary
   47       | binary • '-' binary
   48       | binary • '*' binary
   49       | binary • '/' binary
   50       | binary • '%' binary
   52       | binary • LOGICAL_AND binary
   53       | binary • LOGICAL_OR binary

    '+'          shift, and go to state 83
    '-'          shift, and go to state 84
    '*'          shift, and go to state 85
    '/'          shift, and go to state 86
    '%'          shift, and go to state 87
    RELOP        shift, and go to state 88
    EQUOP        shift, and go to state 89
    LOGICAL_AND  shift, and go to state 90
    LOGICAL_OR   shift, and go to state 91

    $default  reduce using rule 43 (expr)


State 62

   42 expr: unary • '=' expr
   51 binary: unary •
   62 unary: unary • INCOP
   63      | unary • DECOP
   68      | unary • '[' expr ']'
   69      | unary • '.' ID
   70      | unary • STRUCTOP ID
   71      | unary • '(' args ')'
   72      | unary • '(' ')'

    '='       shift, and go to state 92
    '['       shift, and go to state 93
    '('       shift, and go to state 94
    '.'       shift, and go to state 95
    INCOP     shift, and go to state 96
    DECOP     shift, and go to state 97
    STRUCTOP  shift, and go to state 98

    $default  reduce using rule 51 (binary)


State 63

    5 ext_def: type_specifier pointers ID '[' INTEGER_CONST ']' ';' •

    $default  reduce using rule 5 (ext_def)


State 64

   20 param_decl: type_specifier pointers • ID
   21           | type_specifier pointers • ID '[' INTEGER_CONST ']'

    ID  shift, and go to state 99


State 65

   19 param_list: param_list ',' • param_decl

    STRUCT  shift, and go to state 4
    TYPE    shift, and go to state 5

    type_specifier    go to state 34
    struct_specifier  go to state 29
    param_decl        go to state 100


State 66

   15 func_decl: type_specifier pointers ID '(' $@2 param_list ')' •

    $default  reduce using rule 15 (func_decl)


State 67

   24 def: type_specifier pointers ID • ';'
   25    | type_specifier pointers ID • '[' INTEGER_CONST ']' ';'

    '['  shift, and go to state 101
    ';'  shift, and go to state 102


State 68

   60 unary: '-' unary •
   62      | unary • INCOP
   63      | unary • DECOP
   68      | unary • '[' expr ']'
   69      | unary • '.' ID
   70      | unary • STRUCTOP ID
   71      | unary • '(' args ')'
   72      | unary • '(' ')'

    '['       shift, and go to state 93
    '('       shift, and go to state 94
    '.'       shift, and go to state 95
    INCOP     shift, and go to state 96
    DECOP     shift, and go to state 97
    STRUCTOP  shift, and go to state 98

    $default  reduce using rule 60 (unary)


State 69

   62 unary: unary • INCOP
   63      | unary • DECOP
   67      | '*' unary •
   68      | unary • '[' expr ']'
   69      | unary • '.' ID
   70      | unary • STRUCTOP ID
   71      | unary • '(' args ')'
   72      | unary • '(' ')'

    '['       shift, and go to state 93
    '('       shift, and go to state 94
    '.'       shift, and go to state 95
    INCOP     shift, and go to state 96
    DECOP     shift, and go to state 97
    STRUCTOP  shift, and go to state 98

    $default  reduce using rule 67 (unary)


State 70

   61 unary: '!' unary •
   62      | unary • INCOP
   63      | unary • DECOP
   68      | unary • '[' expr ']'
   69      | unary • '.' ID
   70      | unary • STRUCTOP ID
   71      | unary • '(' args ')'
   72      | unary • '(' ')'

    '['       shift, and go to state 93
    '('       shift, and go to state 94
    '.'       shift, and go to state 95
    INCOP     shift, and go to state 96
    DECOP     shift, and go to state 97
    STRUCTOP  shift, and go to state 98

    $default  reduce using rule 61 (unary)


State 71

   62 unary: unary • INCOP
   63      | unary • DECOP
   66      | '&' unary •
   68      | unary • '[' expr ']'
   69      | unary • '.' ID
   70      | unary • STRUCTOP ID
   71      | unary • '(' args ')'
   72      | unary • '(' ')'

    '['       shift, and go to state 93
    '('       shift, and go to state 94
    '.'       shift, and go to state 95
    INCOP     shift, and go to state 96
    DECOP     shift, and go to state 97
    STRUCTOP  shift, and go to state 98

    $default  reduce using rule 66 (unary)


State 72

   54 unary: '(' expr • ')'

    ')'  shift, and go to state 103


State 73

   42 expr: unary • '=' expr
   51 binary: unary •
   55 unary: '(' unary • ')'
   62      | unary • INCOP
   63      | unary • DECOP
   68      | unary • '[' expr ']'
   69      | unary • '.' ID
   70      | unary • STRUCTOP ID
   71      | unary • '(' args ')'
   72      | unary • '(' ')'

    '='       shift, and go to state 92
    '['       shift, and go to state 93
    '('       shift, and go to state 94
    ')'       shift, and go to state 104
    '.'       shift, and go to state 95
    INCOP     shift, and go to state 96
    DECOP     shift, and go to state 97
    STRUCTOP  shift, and go to state 98

    $default  reduce using rule 51 (binary)


State 74

   31 stmt: RETURN expr • ';'

    ';'  shift, and go to state 105


State 75

   38 stmt: WHILE '(' • expr ')' stmt

    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '&'            shift, and go to state 41
    '('            shift, and go to state 42
    SYM_NULL       shift, and go to state 48
    CHAR_CONST     shift, and go to state 49
    STRING         shift, and go to state 50
    INCOP          shift, and go to state 51
    DECOP          shift, and go to state 52
    INTEGER_CONST  shift, and go to state 54
    ID             shift, and go to state 55

    expr    go to state 106
    binary  go to state 61
    unary   go to state 62


State 76

   39 stmt: FOR '(' • expr_e ';' expr_e ';' expr_e ')' stmt

    '-'            shift, and go to state 38
    '*'            shift, and go to state 39
    '!'            shift, and go to state 40
    '&'            shift, and go to state 41
    '('            shift, and go to state 42
    SYM_NULL       shift, and go to state 48
    CHAR_CONST     shift, and go to state 49
    STRING         shift, and go to state 50
    INCOP          shift, and go to state 51
    DECOP          shift, and go to state 52
    INTEGER_CONST  shift, and go to state 54
    ID             shift, and go to state 55

    $default  reduce using rule 41 (expr_e)

    expr_e  go to state 107
    expr    go to state 108
    binary  go to state 61
    unary   go to state 62


State 77

   32 stmt: BREAK ';' •

    $default  reduce using rule 32 (stmt)


State 78

   33 stmt: CONTINUE ';' •

    $default  reduce using rule 33 (stmt)


State 79

   62 unary: unary • INCOP
   63      | unary • DECOP
   64      | INCOP unary •
   68      | unary • '[' expr ']'
   69      | unary • '.' ID
   70      | unary • STRUCTOP ID
   71      | unary • '(' args ')'
   72      | unary • '(' ')'

    '['       shift, and go to state 93
    '('       shift, and go to state 94
    '.'       shift, and go to state 95
    INCOP     shift, and go to state 96
    DECOP     shift, and go to state 97
    STRUCTOP  shift, and go to state 98

    $default  reduce using rule 64 (unary)


State 80

   62 unary: unary • INCOP
   63      | unary • DECOP
   65      | DECOP unary •
   68      | unary • '[' expr ']'
   69      | unary • '.' ID
   70      | unary • STRUCTOP ID
   71      | unary • '(' args ')'
   72      | unary • '(' ')'

    '['       shift, and go to state 93
    '('       shift, and go to state 94
    '.'       shift, and go to state 95
    INCOP     shift, and go to state 96
    DECOP     shift, and go to state 97
    STRUCTOP  shift, and go to state 98
